--- a/src/app/components/movimentacao-new/movimentacao-new.component.html
+++ b/src/app/components/movimentacao-new/movimentacao-new.component.html
@@ -1,5 +1,45 @@
-<p>movimentacao-new works!</p>
+<div class="container">
+  <div class="jumbotron">
+    <h1 class="display-6">Movimentação</h1>
+    <p class="lead-1">Faça uma nova transação</p>
+    <hr class="my-2">
 
-<button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-    Action <span class="caret"></span>
-  </button>
+    <div class="col-md-3">
+      <label for="iData" class="form-label">Data</label>
+      <input type="date" [(ngModel)]="dataHora" class="form-control" id="iData">
+    </div>
+
+    <div class="col-md-9">
+      <label for="iCorrentista" class="form-label">Correntista</label>
+      <select id="iCorrentista" [(ngModel)]="correntista" class="form-select">
+        <option *ngFor="let c of correntistas" [ngValue]="c">{{c.cpf}}-{{c.nome}}</option>
+      </select>
+    </div>
+
+    <div class="col-12">
+      <label for="iDescricao" class="form-label">Descrição</label>
+      <input type="text" [(ngModel)]="descricao" class="form-control" id="iDescricao"
+        placeholder="Informe uma descrição">
+    </div>
+
+    <div class="col-md-3">
+      <label for="iTipo" class="form-label">Tipo de movimentação</label>
+      <select id="iTipo" [(ngModel)]="tipo" class="form-select">
+        <option selected>RECEITA</option>
+        <option>DESPESA</option>
+      </select>
+    </div>
+
+    <div class="col-md-2">
+      <label for="iValor" class="form-label">R$ Valor</label>
+      <input type="text" [(ngModel)]="valor" currencyMask [options]="{ prefix: 'R$ ', thousands: '.', decimal: ',' }"
+        class="form-control" id="iValor">
+    </div>
+
+    <div class="d-grid gap-2 d-md-flex ">
+      <button (click)="save()" class="btn btn-outline-primary me-md-2" type="button">Confirmar</button>
+      <a routerLink="/movimentacoes" class="btn btn-outline-secondary">Cancelar</a>
+    </div>
+
+  </div>
+</div>
